--- a/styles.scss
+++ b/styles.scss
@@ -761,11 +761,10 @@ font-size: 1rem;
     padding-right: 1rem;
 
     display: grid;
-
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;;
 
     img {
       height: 100%;
@@ -782,6 +781,19 @@ font-size: 1rem;
     }
 
   }
+
+  .galleryDiv1 { grid-area: 1 / 1 / 2 / 2; }
+  .galleryDiv2 { grid-area: 1 / 2 / 2 / 3; }
+  .galleryDiv3 { grid-area: 2 / 1 / 3 / 2; }
+  .galleryDiv4 { grid-area: 2 / 2 / 3 / 3; }
+  .galleryDiv5 { grid-area: 3 / 1 / 4 / 2; }
+  .galleryDiv6 { grid-area: 3 / 2 / 4 / 3; }
+  .galleryDiv7 { grid-area: 4 / 1 / 5 / 2; }
+  .galleryDiv8 { grid-area: 4 / 2 / 5 / 3; }
+  .galleryDiv9 { grid-area: 5 / 1 / 6 / 2; }
+  .galleryDiv10 { grid-area: 5 / 2 / 6 / 3; }
+  .galleryDiv11 { grid-area: 6 / 1 / 7 / 2; }
+  .galleryDiv12 { grid-area: 6 / 2 / 7 / 3; }
 
 
   .gallerygridsmall {
@@ -792,10 +804,10 @@ font-size: 1rem;
     padding-right: 1rem;
 
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(2, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
 
     img {
       height: 100%;
@@ -813,7 +825,10 @@ font-size: 1rem;
   }
 
 
-
+  .galleryDiv1small { grid-area: 1 / 1 / 2 / 2; }
+  .galleryDiv2small { grid-area: 1 / 2 / 2 / 3; }
+  .galleryDiv3small { grid-area: 2 / 1 / 3 / 2; }
+  .galleryDiv4small { grid-area: 2 / 2 / 3 / 3; }
 
 
 
